--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Jekyll Omega Theme
+title:            Welcome to my  Blog
 description:      "A beautiful theme for jekyll"
 logo:             omikron.png
 disqus_shortname:
