--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Welcome to my  Blog
-description:      "A beautiful theme for jekyll"
+description:      "敬畏耶和华是智慧的开端 (111:10)"
 logo:             omikron.png
 disqus_shortname:
 duoshuo_shortname:  i2brother
