--- a/_config.yml
+++ b/_config.yml
@@ -19,25 +19,25 @@ fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:       		   http://blog.ibrother.me/jekyll-omega-theme
+url:       		   ""
 
 # Owner/author information
 owner:
-  name:           ibrother
+  name:           froyobin
   avatar:         moe.png
-  email:          ibrother.linux@gmail.com
+  email:          frobin.bin@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    animal
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        IbrotherLinux
-  facebook:       ibrother.me
-  github:         ibrother
+  twitter:        froyobin
+  facebook:       froyobin.me
+  github:
   stackexchange:  
   linkedin:       
   instagram:      
   flickr:         
   tumblr:         
-  weibo: 234684967
+  weibo: 
   # For Google Authorship https://plus.google.com/authorship
 google_plus:    
 
