--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ logo:             omikron.png
 disqus_shortname:
 duoshuo_shortname:  i2brother
 # Assign a default image for your site's header and footer
-default_bg:       my_bg.png
+default_bg:       http://froyobin.github.io/home/images/my_bg.png
 search:           true
 share:            true
 # Read Time is a calculator tp provide post read-time based on word count. Usage is recommended.
