修改评论信息
增加评论到我自己多说账号

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Welcome to my  Blog
 description:      "敬畏耶和华是智慧的开端 (111:10)"
 logo:             omikron.png
 disqus_shortname:
-duoshuo_shortname:  i2brother
+duoshuo_shortname:  froyobin
 # Assign a default image for your site's header and footer
 default_bg:       http://froyobin.github.io/home/images/my_bg.png
 search:           true
