--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ links:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Shanghai
 future:      true
-highlighter: pygments
+highlighter: rouge
 markdown:    kramdown
 excerpt_separator: "<!--more-->"
 paginate:    6
